Finish the project1 page

--- a/project.html
+++ b/project.html
@@ -21,10 +21,11 @@
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
+                    <li ><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
-                    <li><a href="project2.html" class="link">Graphic</a></li>
-                    <li><a href="project2.html"class="link">Contact</a></li>
+                    <li ><a href="project2.html" class="link">Graphic</a></li>
+                    <li class="active"><a href="project.html" class="link">Web</a></li>
+                    
                 </ul>
             </nav>
             <script src="nav.js"></script>
