--- a/project2.html
+++ b/project2.html
@@ -21,10 +21,11 @@
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
+                    <a href="Home.html" class="logo">ALLISON MU</a>
+                    <li ><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
-                    <li><a href="project2.html" class="link">Graphic</a></li>
-                    <li><a href="project2.html"class="link">Contact</a></li>
+                    <li class="active"><a href="project2.html" class="link">Graphic</a></li>
+                    <li><a href="project.html" class="link">Web</a></li>
                 </ul>
             </nav>
             <script src="nav.js"></script>
@@ -54,7 +55,7 @@
           <div><h3>APPLIED SKILLS/TOOLS</h3>
             <p>Adobe Illstruator, Indesign, Photoshop, Procreate</p>
           </div>
-            <!-- <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group. In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p> -->
+            <!-- <p></p> -->
         </div>
       </div> 
     </div>
@@ -75,53 +76,58 @@
     </div>
     </div>
 
-    <div class="steps"><div><h3>Step 1 - Research and Color Pallete</h3></div><div><p>Analyzing first year student’s state, what is their need? What is the content on the poster? This step help a team to decide th elements of a poster, and make sure the working direction</p></div></div>
+    <div class="steps"><div><h2>Step 1 - Research and Color Pallete</h2></div><div><p>First, we have researched the relative poster, and decided the style as a team. Since we were creating a serial of posters, so we were also looking for the bright color pallete to match our theme - party.</p></div></div>
 
-    <div class="flex-container">
-    <div><h3>Step 2 - Draft 1</h3><p>This is a hand draw draft, the purpose of it is to decid the color pallete and the layout. However</p></div>
-    <img src="images/draft.jpg" alt="IAT 103 - poster" class="posters">
-    <img src="images/draft2.jpg" alt="IAT 103 - poster" class="posters">
-    </div>
-
-    <div class="flex-container">
+    <div class="flex-container2">
     <div>
-    <img src="images/coffe.png" alt="IAT 103 - poster" class="icon">
-    <img src="images/puzzle.png" alt="IAT 103 - poster" class="icon"></div>
-    <div><h3>Step 3 - Illustate visual element</h3><p>Instead of the cartoon character, we would like to use student's daily items to represent each individual, for instance, cofffe cups, puzzel and smart phone.</p></div>
+      <div><img src="images/draft.jpg" alt="handDrawing" ></div>
+      <div><img src="images/draft2.jpg" alt="handDrawing" ></div>
+    </div>
     </div>
 
-    <div class="flex-container">
-    <div><h3>Step 4 - Digital Draft</h3><p>In this stage, we started to creat a digital draft with the previous elements, and choose the san-serif font as the title font, because the style could match the theme. But the background is a little bit empty which could add more decoration elements.</p></div>
-    <img src="Style_Guide_Template/images/draft3.png" alt="IAT 103 - poster" class="posters">
-    <img src="Style_Guide_Template/images/process.png" alt="IAT 103 - poster" class="posters">
+     <div class="steps"><div><h2>Step 2 - Sketching</h2></div><div><p>As the major designer, I started to draw the poster sketch and decided the visual elements. In this stage, I was still not deciding how many illustration should I put on the poster, then I created two different layout in order to discuss with my team mates later. </p></div></div>
+
+    <div class="flex-container2">
+    <div>
+      <div><img src="images/draft3.png" alt="digitalDraft" class="phonePoster"></div>
+      <div><img src="images/process.png" alt="digitalDraft"></div>
+    </div>
     </div>
 
-  </div>
+     <div class="steps"><div><h2>Step 3 - Digital Draft</h2></div><div><p> Some of my group members prefered the simple and clear layout compared with the repeating typography, then I tried to use photoShop to visualize the idea: multiple illustration and the title is simple and clean with all the necessary information
+      </p></div></div>
+ 
+    <div class="flex-container2 ver2">
+    <div>
+      <div><img src="images/poster2.png" alt="FinalPosters" class="phonePoster"></div>
+      <div><img src="images/poster3.png" alt="FinalPosters" class="phonePoster"></div>
+    </div>
+    </div>
+
+     <div class="steps"><div><h2>Step 4 - Final</h2></div>
+     <div>
+     <p>This is the final stage of the process. There are few things that I improve from the last setp</p>
+      <ul><li>Using the illustrator to create the final visual elements: phone and pencil</li>
+      <li>Deciding the final typography basing on the feedback</li>
+      <li>Adding the Chinese on the corner in order to attract target audience</li></ul>
+      </div>
+      </div>
+ 
+</div>
 <div class="container">
-        <h1 class="sub-title"> Final Poster</h1>
-        <div class="flex-container">
-        <div class="pic-container">
-        <img src="Style_Guide_Template/images/poster.png" alt="IAT 103 - poster" class="image">
-        <div class="overlay">IAT 103 - Final Poster</div>
-        </div> 
-
-        <div class="pic-container">
-        <img src="Style_Guide_Template/images/poster3.png" alt="IAT 103 - poster" class="image">
-        <div class="overlay">IAT 103 - Final Poster</div>
+        <div class="reflection-container ">
+        <div><h1> Reflection</h1></div>
+        <div>
+        <p>I learned a lot by doing the project with my teammates. The first thing is we should analyzing the target audience, then we will know what is kind of poster will get their attention in order to run a campaign. Secondly, typography layout could be also important besides the illustration, a good layoutr could make the theme clear.</p>
         </div>
-
-        <div class="pic-container">
-        <img src="Style_Guide_Template/images/poster2.png" alt="IAT 103 - poster" class="image">
-        <div class="overlay">IAT 103 - Final Poster</div>
         </div>
-        </div> 
 </div>
 
 <div class="container">
-        <div class="flex-container">
-        <h1 class="sub-title"> Reflection</h1>
-        <div class="right-content">
-        <p>I learned a lot by doing the project with my teammates. The first thing is we should analyzing the target audience, then we will know what is kind of poster will get their attention in order to run a campaign. Secondly, typography layout could be also important besides the illustration </p>
+        <div class="reflection-container ">
+        <div><h1> Challenge</h1></div>
+        <div>
+        <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group. In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p>
         </div>
         </div>
 </div>
