--- a/Home.html
+++ b/Home.html
@@ -26,28 +26,12 @@
                     <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
                     <li><a href="project2.html" class="link">Graphic</a></li>
-                    <li><a href="project2.html"class="link">Contact</a></li>
+                    <li><a href="web.html"class="link">Web</a></li>
                 </ul>
             </nav>
             <script src="nav.js"></script>
       </div>
 
-
-<!-- 
-    <div class="flex-intro">
-      <div>
-      <div>
-      <h1 class="intro">Hi, I'm Allison</h1>
-      </div>
-      <div><h2>A Curious Learner and A Graphic Designer</h2>
-      </div>
-      </div>
-    </div> -->
-
-<!--     <div class="text-container">
-        <p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences. Skilled in Adobe Creative Suite, including Photoshop, InDesign, Illustrator, and more.</p>
-    </div>
- -->
  <section class="section1">
   <div class="flex-title">
 
@@ -144,7 +128,7 @@
 </section>
 <footer class="footer">
     <div><a href="#"><h3>GitHub</h3></a></div>
-    <div><a href="#"><h3>StyleGuide</h3></a></div>
+    <div><a href="Style_Guide_Template/Template.html"><h3>StyleGuide</h3></a></div>
     <div><a href="#"><h3>Reference</h3></a></div>
 </footer>
 <script>
