--- a/project.html
+++ b/project.html
@@ -45,6 +45,10 @@
             This is a project for creating a e-commerce website for a visual interior design company. As a team, we applied a minimalism style to design the website in order to fit the concept of the company. This website contained all the basic information that a company should have, including the update event, company story, product list and contact method. As the designer, we would like to create a clear simple layout website with accessibility in order to let all the users can browser the website easily.
             </p>
           </div>
+
+           <div><h3>Challenge & Solution</h3>
+            <p>The biggest challenge is to design a user-friendly website for all the users. Since there are many different devices now, for instance, Ipad, Iphone and PC, our website should work for all of them.  At the first, the layout of web page is not responsive on different devices, for instance, all the text are compressed together; the image is too small; and the navigation bar can not work. In order to solve the problem, we conducted usability test on different devices and fix the problem.</p>
+        </div>
           <div><h3>Process</h3>
             <ol class="numberedList">
             <li>Brainstorm：decided the company’s concept, target audience and the color palette.</li>
@@ -54,9 +58,7 @@
             </ol>
           </div>
 
-          <div><h3>Challenge</h3>
-            <p>The biggest challenge is to design a user-friendly website for all the users. Since there are many different devices now, for instance, Ipad, Iphone and PC, our website should work for all of them.  At the first, the layout of web page is not responsive on different devices, for instance, all the text are compressed together; the image is too small; and the navigation bar can not work. In order to solve the problem, we conducted usability test on different devices and fix the problem.</p>
-        </div>
+         
       </div> 
       </div>  
       </section>
