--- a/project2.html
+++ b/project2.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poster Design</title>
 
    <!--  <link href="Style_Guide_Template/css/main.css" rel="stylesheet"> -->
@@ -15,17 +16,17 @@
   </head>
 
   <body>
+    <h1 class="title">Allison Mu</h1>
     <div class="topnav" id="myTopnav">
             <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <a href="Home.html" class="logo">ALLISON MU</a>
                     <li ><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
                     <li class="active"><a href="project2.html" class="link">Graphic</a></li>
-                    <li><a href="project.html" class="link">Web</a></li>
+                    <li><a href="web.html" class="link">Web</a></li>
                 </ul>
             </nav>
             <script src="nav.js"></script>
@@ -114,6 +115,17 @@
       </div>
  
 </div>
+
+<div class="container">
+        <div class="reflection-container ">
+        <div><h1> Challenge & Solution</h1></div>
+        <div>
+        <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group.</p>
+        <b><p>Solution</p></b>
+        <p> In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p>
+        </div>
+        </div>
+</div>
 <div class="container">
         <div class="reflection-container ">
         <div><h1> Reflection</h1></div>
@@ -123,14 +135,11 @@
         </div>
 </div>
 
-<div class="container">
-        <div class="reflection-container ">
-        <div><h1> Challenge</h1></div>
-        <div>
-        <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group. In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p>
-        </div>
-        </div>
-</div>
-    <!-- // COMBINED ELEMENTS SECTION -->
+
+      <footer class="footer">
+    <div><a href="#"><h3>GitHub</h3></a></div>
+    <div><a href="Style_Guide_Template/Template.html"><h3>StyleGuide</h3></a></div>
+    <div><a href="#"><h3>Reference</h3></a></div>
+</footer>
   </body>
 </html>
