--- a/Home.html
+++ b/Home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Allison's Portfolio</title>
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href="css/home.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
     <link href="css/footer.css" rel="stylesheet">
@@ -18,18 +18,18 @@
   <body>
 
     <div class="topnav" id="myTopnav">
-            <nav  class="navbar" id="myTopnav">
+            <nav  class="navbar">
                 <ul class="main-nav" id="js-menu">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <li class="active"><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
-                    <li><a href="Home.html" class="link">Home</a></li>
-                    <li><a href="project2.html" class="link">Graphic</a></li>
-                    <li><a href="web.html"class="link">Web</a></li>
+                    
+                    <li class="active"><a href="Home.html" class="link">Home</a></li>
+                    <li><a href="graphic.html" class="link">Graphic</a></li>
+                    <li><a href="web.html" class="link">Web</a></li>
                 </ul>
             </nav>
-            <script src="nav.js"></script>
+            <script src="js/nav.js"></script>
       </div>
 
  <section class="section1">
@@ -44,17 +44,16 @@
 
 
    <div class="right-content">
-      <div class="intro a" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>Hello!</h1></div>
+      <div class="intro a" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>Hello!</h1></div>
 
-      <div class="intro b" data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>I'M ALLISON</h1>
+      <div class="intro b" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000"><h1>I'M ALLISON</h1>
       </div>
    </div>
-
-
   </div>
+
    <div class="banner-bridge-center">
       <a class="scroll-button" href="#section2">
-      <i class="fa fa-angle-down" href="#section2"></i>
+      <i class="fa fa-angle-down"></i>
       </a>
    </div>
 </section>
@@ -71,7 +70,7 @@
 
     <div class="flex-skills" data-aos="flip-up" data-aos-duration="1000">
       <h2>My Skill</h2>
-          <div><ul><h3>Adobe Software</h3>
+          <div><h3>Adobe Software</h3><ul>
           <li>Illustrator</li>
           <li>premiere</li>
           <li>PhotoShop</li>
@@ -79,21 +78,21 @@
           </ul></div>
 
 
-        <div><ul><h3>Web Development</h3>
+        <div><h3>Web Development</h3><ul>
           <li>Website</li>
           <li>Interaction design</li>
           <li>Responsive design</li>
         </ul></div>
 
 
-        <div><ul><h3>Code</h3>
+        <div><h3>Code</h3><ul>
           <li>HTML</li>
           <li>Pathon</li>
           <li>CSS</li>
           <li>JavaScript</li>
         </ul></div>
 
-        <div><ul><h3>Design</h3>
+        <div><h3>Design</h3><ul>
           <li>Web design</li>
           <li>Art direction</li>
           <li>Logo & branding</li>
@@ -108,11 +107,11 @@
     <div>
     <div class="display"><h3>Poster Design - IAT 103</h3><img src="images/posterDisplay.jpg" alt="Posters" class="posterImages">
     </div>
-    <div><a href="project2.html" class="btn btn-1">Detail</a></div>
+    <div><a href="graphic.html" class="btn btn-1">Detail</a></div>
     </div>
 
     <div>
-    <div class="display"><h3>Website Design - IAT 339</h3><img src="images/webDisplay.jpg" alt="website"class="webImage"></div><div><a href="project2.html" class="btn btn-1">Detail</a></div>
+    <div class="display"><h3>Website Design - IAT 339</h3><img src="images/webDisplay.jpg" alt="website" class="webImage"></div><div><a href="web.html" class="btn btn-1">Detail</a></div>
     </div>
   </div>
 
@@ -127,9 +126,9 @@
   </div>
 </section>
 <footer class="footer">
-    <div><a href="#"><h3>GitHub</h3></a></div>
+    <div><a href="https://github.com/yuqingqingmu/P03-PortfolioProject"><h3>GitHub</h3></a></div>
     <div><a href="Style_Guide_Template/Template.html"><h3>StyleGuide</h3></a></div>
-    <div><a href="#"><h3>Reference</h3></a></div>
+    <div><a href="reference.html"><h3>Reference</h3></a></div>
 </footer>
 <script>
   AOS.init();
