--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
@@ -35,11 +35,11 @@
                     </a>
                     <li class="active"><a href="Template.html" class="link">Styleguide</a></li>
                     <li><a href="../Home.html" class="link">Home</a></li>
-                    <li><a href="../project2.html" class="link">Graphic</a></li>
+                    <li><a href="../graphic.html" class="link">Graphic</a></li>
                     <li><a href="../web.html" class="link">Web</a></li>
                 </ul>
             </nav>
-            <script src="nav.js"></script>
+            <script src="js/nav.js"></script>
       </div>
 
     <!-- INTERACTIVE ELEMENTS SECTION // -->
@@ -288,14 +288,14 @@
       <h1 class="sub-title">About Me</h1>
       <h3>Yuqingqing Mu(Allison)</h3>
       <p>Highly creative and motivated interactive arts and technology program student with graphic & web design experience critical thinking and problem solving skills. As a curious learner, I am good at communicating with colleagues and learning new things. For me, the most interesting part of graphic design is that I could express my personality by my works and communicate with the audiences. Skilled in Adobe Creative Suite, including Photoshop, InDesign, Illustrator, and more.</p>
-      <p>Click to view <a href="../project.html" class="in-text-link">initial web page.</a></p>
+      <p>Click to view <a href="../Home.html" class="in-text-link">initial web page.</a></p>
     </section>
   </div>
 
   <footer class="footer">
-    <div><a href="#"><h3>GitHub</h3></a></div>
+    <div><a href="https://github.com/yuqingqingmu/P03-PortfolioProject"><h3>GitHub</h3></a></div>
     <div><a href="../Home.html"><h3>WebPage</h3></a></div>
-    <div><a href="#"><h3>Reference</h3></a></div>
+    <div><a href="reference.html"><h3>Reference</h3></a></div>
 </footer>
   </body>
 </html>
