--- a/graphic.html
+++ b/graphic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
@@ -7,29 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Poster Design</title>
 
-   <!--  <link href="Style_Guide_Template/css/main.css" rel="stylesheet"> -->
-   <!-- <link href="css/home.css" rel="stylesheet"> -->
     <link href="css/project.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <h1 class="title">Allison Mu</h1>
-    <div class="topnav" id="myTopnav">
+    <div class="topnav">
             <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <li ><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
-                    <li class="active"><a href="project2.html" class="link">Graphic</a></li>
+                    <li class="active"><a href="graphic.html" class="link">Graphic</a></li>
                     <li><a href="web.html" class="link">Web</a></li>
                 </ul>
             </nav>
-            <script src="nav.js"></script>
+            <script src="js/nav.js"></script>
       </div>
 
       <section>
@@ -118,17 +115,17 @@
 
 <div class="container">
         <div class="reflection-container ">
-        <div><h1> Challenge & Solution</h1></div>
+        <div><h2> Challenge & Solution</h2></div>
         <div>
         <p>Since we are creating a serial of posters, it is hard to unify the design style when we have five designer in a group.</p>
-        <b><p>Solution</p></b>
+        <p><b>Solution</b></p>
         <p> In order to solve the problem, I communicated with my team members to decide what kinds of elements should be included on the poster, and asked everybody to research some related posters. After researching and brainstorming, we all agreed to use the student’s daily item to symbolize individuals, and use bright color palette to create the posters. As the main designer, I was in charge of create the first layout and the illustration, then my teammates could follow the template to make the same style posters.</p>
         </div>
         </div>
 </div>
 <div class="container">
         <div class="reflection-container ">
-        <div><h1> Reflection</h1></div>
+        <div><h2> Reflection</h2></div>
         <div>
         <p>I learned a lot by doing the project with my teammates. The first thing is we should analyzing the target audience, then we will know what is kind of poster will get their attention in order to run a campaign. Secondly, typography layout could be also important besides the illustration, a good layoutr could make the theme clear.</p>
         </div>
@@ -137,9 +134,9 @@
 
 
       <footer class="footer">
-    <div><a href="#"><h3>GitHub</h3></a></div>
+    <div><a href="https://github.com/yuqingqingmu/P03-PortfolioProject"><h3>GitHub</h3></a></div>
     <div><a href="Style_Guide_Template/Template.html"><h3>StyleGuide</h3></a></div>
-    <div><a href="#"><h3>Reference</h3></a></div>
+    <div><a href="reference.html"><h3>Reference</h3></a></div>
 </footer>
   </body>
 </html>
