--- a/web.html
+++ b/web.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
@@ -11,26 +11,25 @@
    <!-- <link href="css/home.css" rel="stylesheet"> -->
    <link href="css/web.css" rel="stylesheet">
    <link href="css/project.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <h1 class="title">Allison Mu</h1>
-    <div class="topnav" id="myTopnav">
+    <div class="topnav">
             <nav  class="navbar" id="myTopnav">
                 <ul class="main-nav" id="js-menu">
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars fa-2x"></i>
                     </a>
-                    <li ><a href="Style_Guide_Template/Template.html" class="link">Styleguide</a></li>
                     <li><a href="Home.html" class="link">Home</a></li>
-                    <li><a href="project2.html" class="link">Graphic</a></li>
+                    <li><a href="graphic.html" class="link">Graphic</a></li>
                     <li class="active"><a href="web.html" class="link">Web</a></li>
                 </ul>
             </nav>
-            <script src="nav.js"></script>
+            <script src="js/nav.js"></script>
       </div>
 
       <section>
@@ -39,7 +38,7 @@
     
   
         <div class="iframe">
-          <iframe src="http://www.sfu.ca/~yuqiy/iat339/iat339%20final%20P2/iat339_po2/po1style/home.html" title="Interior Design Company" width="100%" height="450px"></iframe>
+          <iframe src="http://www.sfu.ca/~yuqiy/iat339/iat339%20final%20P2/iat339_po2/po1style/home.html" title="Interior Design Company"></iframe>
         </div> 
 
         <div class="background">
@@ -59,10 +58,8 @@
             <!-- <p></p> -->
         </div>
       </div> 
-   
-  </section>
+    </div>
 
-  <section></section>
   <div class="container">
     <h1>Process</h1>
 
@@ -134,17 +131,17 @@
 
 <div class="container">
         <div class="reflection-container ">
-        <div><h1> Challenge & Solution</h1></div>
+        <div><h2> Challenge & Solution</h2></div>
         <div>
         <p>The biggest challenge is to design a user-friendly website for all the users. At the first, the layout of web page is not responsive on different devices, for instance, all the text were compressed together on iphone; the image is too small for some; and the navigation bar can not work, even they were fine on the computer. </p>
-        <b><p>Solution</p></b>
+        <p><b>Solution</b></p>
         <p>In order to solve the problem, we conducted usability test on different devices and fix each problem. Adding the flex box for div could be really helpful for creating a responsive web page.</p>
         </div>
         </div>
 </div>
 <div class="container">
         <div class="reflection-container ">
-        <div><h1> Reflection</h1></div>
+        <div><h2> Reflection</h2></div>
         <div>
         <p>After this project, I have learned more knowledge about website designing. First, creating a styleguide at the beginning could help a team to make sure the style and direction, and the usability and accessibility are important for a website, since we have different users are using different devices.</p>
         </div>
@@ -152,9 +149,11 @@
 </div>
 
       <footer class="footer">
-    <div><a href="#"><h3>GitHub</h3></a></div>
-    <div><a href="Style_Guide_Template/Template.html"><h3>WebPage</h3></a></div>
-    <div><a href="#"><h3>Reference</h3></a></div>
-</footer>
+    <div><a href="https://github.com/yuqingqingmu/P03-PortfolioProject"><h3>GitHub</h3></a></div>
+    <div><a href="Style_Guide_Template/Template.html"><h3>StyleGuide</h3></a></div>
+    <div><a href="reference.html"><h3>Reference</h3></a></div>
+  </footer>
+  </section>
+
   </body>
 </html>
